austria can now conclude separate peace

--- a/localisation/english/ww1_events_l_english.yml
+++ b/localisation/english/ww1_events_l_english.yml
@@ -455,7 +455,7 @@
 
  ww1_auh.177.t:0 "Food Protests"
  ww1_auh.177.d:0 "The war continues and the situation does not improve for the population of the empire. Particularly in the east of the empire, crowds demonstrated for an end to the fighting. These protests are coupled with rising nationalism in Galicia, Hungary and all other regions. The promise of autonomy conferred by Emperor Karl had better be kept quickly..."
- ww1_auh.177.a:0 "This war must end now !"
+ ww1_auh.177.a:0 "This war must end now!"
 
  ww1_auh.178.t:0 "New Food Protests"
  ww1_auh.178.d:0 "Numerous hunger riots broke out in Vienna. Women, children and old people mingle in long marches through the streets of the capital. Police forces, becoming compassionate with demonstrators, no longer always intervene to hold back these angry crowds. The government should immediately cease hostilities, before it is too late..."
@@ -468,7 +468,7 @@
  ww1_auh.180.t:0 "A Letter From [AUH.getLeader]"
  ww1_auh.180.d:0 "The Prime Minister [FRA.GetLeader] received this morning a letter from Sixtus of Bourbon-Parma, the brother-in-law of Charles I of Austria. In this letter, the Prince of Parma wishes to be an interlocutor allowing the two nations to establish secret peace negotiations. The document also contains a written letter from the Austro-Hungarian Emperor indicating that they are willing to make many concessions for Austria to exit the war. In particular, the liberation of Serbia and its access to the sea is mentioned, while giving vague guarantees of support for the liberation of Belgium and the question of Alsace Lorraine."
  ww1_auh.180.a:0 "We agree in principle, but we have conditions"
- ww1_auh.180.b:0 "Its out of question !"
+ ww1_auh.180.b:0 "Its out of question!"
 
  ww1_auh.181.t:0 "France Refused any Negociation"
  ww1_auh.181.d:0 "The Parma principle returned without France's approval for possible negotiations. The Prime Minister [FRA.getLeader] did not wish to open a peace conference, certainly because they judge that our situation is too precarious. We are forced to get as close as possible to our German ally, and above all not to reveal this nipped-in-the-bud attempt to betray them."
@@ -478,16 +478,16 @@
  ww1_auh.182.d:0 "France responded favorably to our request. Secret discussions were initiated through the prince of Parma Sixtus of Bourbon-Parma. Through the letter that the prince transmits, [AUH.getLeader] can communicate with [FRA.getLeader] in complete discretion. The French conditions are relatively simple: Liberation of Serbia while granting it access to the sea, liberation of Belgium and restitution of Alsace Lorraine to France."
  ww1_auh.182.a:0 "Alsace-Lorraine ? But its not even under our control... Let's talk to Germany"
  ww1_auh.182.b:0 "We can support theirs claims over Alsace-Lorraine, but we cant guarantee it"
- ww1_auh.182.c:0 "Its out of question !"
+ ww1_auh.182.c:0 "Its out of question!"
 
  ww1_auh.183.t:0 "Austria Refused our Conditions"
  ww1_auh.183.d:0 "Despite the fact that they are only initial and incomplete terms. Austria-Hungary did not accept the basis for negotiation, proof that they were not ready to make the slightest concession and that their approach was not serious. The war will therefore continue until Vienna, it seems."
- ww1_auh.183.a:0 "La guerre !"
+ ww1_auh.183.a:0 "La guerre!"
 
  ww1_auh.184.t:0 "Visit from [AUH.getNameDef]"
  ww1_auh.184.d:0 "Austro-Hungarian Foreign Minister Ottokar Czernin went to Berlin this morning for a business meal during which the question of the course of the war was discussed. In short, the Austrian minister asked that we consider a peace with the Entente. Obviously, [AUH.getLeader] has already initiated secret peace dialogues with France, the question now being to know our position. We can begin a conference with Austria-Hungary in order to establish fairer conditions for the Central Powers."
  ww1_auh.184.a:0 "Let's Setup a Meeting"
- ww1_auh.184.b:0 "Its borderline treason !"
+ ww1_auh.184.b:0 "Its borderline treason!"
 
 #Kreuznach Conference
 #alsace lorraine question
@@ -514,7 +514,7 @@
  ww1_auh.189.t:0 "Kreuznach Conference - Baltics"
  ww1_auh.189.d:0 "The Russian Empire is no longer legitimate to govern in the Baltics, local independence and loyalty to the Germanic roots of the Baltics legitimately push them towards our door. If a united Baltic state would constitute a major advance, part of the German general staff is calling for a direct annexation of these territories within the Reich."
  ww1_auh.189.a:0 "We should form a United Baltic Duche"
- ww1_auh.189.b:0 "Annex everything to Riga !"
+ ww1_auh.189.b:0 "Annex everything to Riga!"
  ww1_auh.189.aa:0 "Germany choosed a United Baltic Duche, good"
  ww1_auh.189.bb:0 "OHL pressured to annex theses territories..."
 
@@ -534,7 +534,7 @@
 
  ww1_auh.193.t:0 "Central Powers Conditions of Peace"
  ww1_auh.193.d:0 "Austria finally decided to side with Germany in order to formulate grouped conditions. This will make the negotiations more complex to the extent that the German Empire thinks it has a chance of achieving final victory, unlike Austria, which is much more realistic. A joint letter from enemy foreign ministries arrived with associated conditions."
- ww1_auh.193.a:0 "Theses terms are unacceptable !"
+ ww1_auh.193.a:0 "Theses terms are unacceptable!"
  ww1_auh.193.b:0 "Italy have claims over Austria that should be counted"
 
  ww1_auh.186.t:0 "Germany Refused to Negotiate"
@@ -543,8 +543,9 @@
 
  ww1_auh.194.t:0 "Central Powers Conditions of Peace"
  ww1_auh.194.d:0 "We were contacted by [FRA.GetLeader] following peace proposals submitted by Austria a few days ago. Obviously, the forces of the Central Powers would like to end the conflict and would have made several concessions. However, nothing has been established about our own gains, and the Treaty of London could no longer have any value if we decided to support this peace initiative."
- ww1_auh.194.a:0 "We stick to the treaty of London !"
+ ww1_auh.194.a:0 "We stick to the treaty of London!"
  ww1_auh.194.b:0 "We can make minimal concessions for peace."
+ ww1_auh.194.c:0 "If its for peace..."
 
  ww1_auh.195.t:0 "Italian Conditions of Peace"
  ww1_auh.195.d:0 "Italy quickly returned to us, immediately demanding that the Treaty of London be properly respected. As we feared, Italy wants to annex a large part of Austrian territory, which leaves little room for negotiation. Despite everything, the demands mentioned are not totally unreasonable, perhaps [AUH.getLeader] will find the wisdom to concede to a lasting peace..."
@@ -552,7 +553,8 @@
 
  ww1_auh.196.t:0 "Italian Conditions of Peace"
  ww1_auh.196.d:0 "France has decided to include sulphurous Italy in the peace negotiation process. The Italians, wishing to annex numerous Austrian territories, thus transmitted their requests, almost identical to those of the Treaty of London. Thus, the Italians claim Trento, part of Dalmatia and Istria. These strategic territories cannot be transferred like this!"
- ww1_auh.196.a:0 "We cant allow that !"
+ ww1_auh.196.a:0 "We cant allow that!"
+ ww1_auh.196.b:0 "We must conclude peace at any cost!"
 
  ww1_auh.197.t:0 "Central Powers Refused"
  ww1_auh.197.d:0 "The Central Powers failed to accept our compromise, effectively ending the negotiations. As we expected, the central empires imagined having the advantage in these peace negotiations, a mistake which risks costing them dearly in a few months..."
@@ -560,7 +562,7 @@
 
  ww1_auh.198.t:0 "Frozen Negotiations"
  ww1_auh.198.d:0 "With our refusal to consider the Italian demands, the French announced to us that the discussions were frozen, the opinion of [ITA.getLeader] being essential to constitute a peace agreement. This complex situation imposes on us a clear direction between sacrificing more territories or reaffirming our alliance with Germany. We could agree to give up more land, but that would seriously damage our prestige. The most ambitious solution would be to antoganize [FRA.getLeader] and its rest of the Entente for their inability to negotiate peace."
- ww1_auh.198.a:0 "Ask Czernin to make a speech antagonizing Clémenceau !"
+ ww1_auh.198.a:0 "Ask Czernin to make a speech antagonizing Clémenceau!"
  ww1_auh.198.b:0 "We shouldn't make the situation worse..."
 
  ww1_auh.199.t:0 "Czernin Speech"
@@ -569,12 +571,12 @@
  ww1_auh.199.b:0 "We shouldnt escalate this..."
 
  ww1_auh.200.t:0 "Sixtus Affair"
- ww1_auh.200.d:0 "To everyone's surprise, the secret letters written by [AUH.getLeader] and transmitted by the Prince of Parma were published within the Havas agency, the main international press. The confidential documents reveal the completeness of the concessions proposed by [AUH.getLeader], including the recognition of Alsace Lorraine as a territory at least partially legitimate to France, the liberation of Belgium, the concession of our lands... All !"
+ ww1_auh.200.d:0 "To everyone's surprise, the secret letters written by [AUH.getLeader] and transmitted by the Prince of Parma were published within the Havas agency, the main international press. The confidential documents reveal the completeness of the concessions proposed by [AUH.getLeader], including the recognition of Alsace Lorraine as a territory at least partially legitimate to France, the liberation of Belgium, the concession of our lands... All!"
  ww1_auh.200.a:0 "Oh no..."
 
  ww1_auh.201.t:0 "Sixtus Affair"
  ww1_auh.201.d:0 "The international press agency Havas published an article including various letters written by [AUH.getLeader] for the French government. These letters contain proposals for Austro-Hungarian peace and various capitulations, such as the recognition of French claims in Alsace-Lorraine. The distribution of these letters follows a conflict between the Austro-Hungarian foreign minister and the French government, the Austrians denying having conceded anything.\n\nFor sure, the letters released are authentic and clearly show that the Austrian minister lied to the world by declaring that Austria had not offered any agreement with the Entente."
- ww1_auh.201.a:0 "They looks less smart, now !"
+ ww1_auh.201.a:0 "They looks less smart, now!"
  ww1_auh.201.b:0 "Is [AUH.getLeader] stupid ?"
  ww1_auh.201.c:0 "Its not good..."
  ww1_auh.201.e:0 "[AUH.getLeader] must be desesperated"
@@ -593,6 +595,29 @@
  ww1_auh.203.b:0 "He was a fool"
 
 
+ ww1_auh.205.t:0 "[AUH.getAdjective] Approval"
+ ww1_auh.205.d:0 "[AUH.getleader] responded favorably to our requests, specifying that it would do everything possible to enforce the terms of the agreement. However, he was more hesitant on the question of Alsace Lorraine, indicating that he could not impose anything on his German ally. Nevertheless, Austria seems prepared to support our demands as best they can. The question now is whether this first basis is sufficient, and what are their conditions for peace..."
+ ww1_auh.205.a:0 "And what they want to secure peace?"
+ ww1_auh.205.b:0 "Its pointless!"
+
+ ww1_auh.206.t:0 "[FROM.getName] Wait our Conditions"
+ ww1_auh.206.d:0 "We must now clarify the territorial gains that we could offer our adversaries. The territories of Galicia are one of the major Russian demands, almost obligatory for an agreement. In the west, the Italians fought to obtain the lands promised by the Treaty of London, including Trentino and South Tyrol, as well as Istria and the entire Yugoslav coast. We should make some concessions to avoid a hasty departure of the negotiators."
+ ww1_auh.206.a:0 "We can make concessions to both Italy and Russia"
+ ww1_auh.206.b:0 "Maybe Galicia is enough ?"
+ ww1_auh.206.c:0 "What about a white peace ?"
+
+ ww1_auh.207.t:0 "Austria compromise on Russian and Italian Claims"
+ ww1_auh.207.d:0 "[AUH.getLeader] wrote a letter in which he agreed to transfer several Italian and Russian territories as we requested. It is now time to find out if this corresponds precisely to the Italian authorities."
+ ww1_auh.207.a:0 "Let's meet [ITA.getLeader]"
+
+ ww1_auh.208.t:0 "Austrian Separate Peace"
+ ww1_auh.208.d:0 "Austria's peace efforts have been successful. In addition to the concessions made by agreeing to cede Galicia, she also spoke with Italy. [AUH.getLeader] and [ITA.getleader] met in Turin where they managed to agree on the just Italian demands. As a result, peace is enforceable and the Treaty of Turin can come into action now. This treaty having been negotiated in secret, it is likely that Germany does not really appreciate the situation, perhaps their capitulation will quickly follow."
+ ww1_auh.208.a:0 "Peace in central Europe ?"
+
+ ww1_auh.209.t:0 "Austria Signs Separate Peace"
+ ww1_auh.209.d:0 "After several months of secret negotiations, [AUH.getLeader] finally announced that it had reached a peace agreement with the Entente aimed at ending the war. Recognizing that the battle led by [AUH.getName] could not be won, he preferred to make a series of concessions aimed at stabilizing the region. Several political experts have indicated that such a decision could have saved the empire from total destruction, the latter having suffered several famines since the start of the conflict.\n\nAs for Germany, its main ally, the Kaiser's reaction is still awaited."
+ ww1_auh.209.a:0 "The war will be over soon"
+ ww1_auh.209.b:0 "WHAT ?!"
 
 
  ww1_auh.17.t:0 "Karl I abdicates the throne"
@@ -1192,7 +1217,7 @@ BUL_FRA_alliance:0 "Franco-Bulgarian Alliance"
 
  ww1_france.268.t:0 "[getdate.getmonth] Railway Workers Strike!"
  ww1_france.268.d:0 "A major strike has been launched by the rail sector throughout France. Quickly followed by other sectors such as electricians or the gas sector, the movement quickly gained importance. This tense situation causes a halt in transport, which would be very detrimental to the country if it found itself at war with Germany."
- ww1_france.268.a:0 "Stop them at any cost ! Send the army!"
+ ww1_france.268.a:0 "Stop them at any cost! Send the army!"
  ww1_france.268.b:0 "Let them strike!"
 
  ww1_france.269.t:0 "Franz Reichelt Death"
@@ -1420,7 +1445,7 @@ BUL_FRA_alliance:0 "Franco-Bulgarian Alliance"
  ww1_france.319.t:0 "Chaos in France"
  ww1_france.319.d:0 "Intense tensions between traditional democratic groups, the communards and the National Salvation Front became too strong to be resolved with words. The different groups gathered their supporters and took control of localities throughout France. The capital was largely taken by workers from the Seine Saint Denis and the suburbs of the south of Paris."
  ww1_france.319.a:0 "We must save the republic!"
- ww1_france.319.b:0 "For the Commune ! "
+ ww1_france.319.b:0 "For the Commune! "
  ww1_france.319.c:0 "France prestige must be restored!"
 
  ww1_france.320.t:0 "Battle of France"
@@ -1802,12 +1827,12 @@ FRA_french_local_investments_exploitation:0 "Minister of Work Budget Increase"
 
  ww1_france.404.t:0 "Execution of Plan XVII"
  ww1_france.404.d:0 "The offensive plan constructed by General Joffre will come into action. From Belfort to Givet, our troops will launch a huge assault, prioritizing the key areas of Mulhouse and Metz. The general staff expects great success thanks to our mass concentration tactics and our superior artillery."
- ww1_france.404.a:0 "A l'attaque !"
+ ww1_france.404.a:0 "A l'attaque!"
 
 
  ww1_france.405.t:0 "Quai de Seine Demobilization"
  ww1_france.405.d:0 "After a great service to the nation, the quays of the Seine have resumed their civil work. André Citroën's company greatly contributed to the victory of the nation, we could not oppose it.."
- ww1_france.405.a:0 "Merci !"
+ ww1_france.405.a:0 "Merci!"
 
  ww1_france.407.t:0 "France Diplomatic Isolation"
  ww1_france.407.d:0 "France has recently isolated itself diplomatically to focus on its internal politics. Since the formation of a far-left coalition, France has strongly limited the expansion of its army and more generally its desire to participate in a major war against Germany. The Prime Minister [FRA.getLeader] sent us their wish to end our military alliance, they are leaving the agreement."
@@ -1908,7 +1933,7 @@ FRA_french_local_investments_exploitation:0 "Minister of Work Budget Increase"
 
  ww1_france.429.t:0 "Napoléon grants political support  to \"L'appel du Peuple\""
  ww1_france.429.d:0 "The People's Appeal was the main Bonapartist party at the end of the 19th century. Ousted because of the clashes caused by the succession conflicts generated by Jérome Bonaparte and by the entrenchment of the third republic in France, it is today only a small structure without political support.\n\nHowever, the return of the House of Bonaparte coupled with the exceptional resurgence experienced by the right over the last 10 years is an opportunity to relaunch this ambitious imperialist party. Anxious to stabilize his position, Prince Napoleon therefore decided to support and restore the importance that this party had in France by joining it as a member."
- ww1_france.429.a:0 "Of course !"
+ ww1_france.429.a:0 "Of course!"
 
  ww1_france.430.t:0 "French Empire Restored"
  ww1_france.430.d:0 "Following the referendum widely accepted by the French population and a protocol validation by the Senate, the constitutional reform project was validated. In just one week, a semi-constitutional constitution was established by Prime Minister Napoleon and his advisors. More modern than the second empire, the proposed third empire is more democratic and liberal.\n\nThe heir to the French throne, Victor Napoleon Bonaparte, was crowned at Notre Dame Cathedral in Paris this Thursday to the acclamations of a people invigorated by victory in the Great War. The future of France looks more glorious than ever."
