--- a/localisation/english/ww1_decisions_l_english.yml
+++ b/localisation/english/ww1_decisions_l_english.yml
@@ -743,6 +743,8 @@ AUH_align_ukraine_desc:0 "The Ukranian region is defeated, we are now free to in
 
  FRA_basic_demands_for_AUH:0 "§CWe will ask for the following concessions :§!"
 
+ FRA_negociation_deal_so_far:0 "§CThe points both parties agreed to respect :§!"
+
  GER_AUH_FRA_puppet_poland:0 "§Y[POL.getFlag]Poland§! will be liberated as a §Y[GER.getFlag][GER.getAdjective]§! puppet."
 
  GER_AUH_FRA_puppet_baltics:0 "§Y[UBD.getFlag][UBD.getName]§! will be liberated as a §Y[GER.getFlag][GER.getAdjective]§! puppet."
@@ -751,11 +753,14 @@ AUH_align_ukraine_desc:0 "The Ukranian region is defeated, we are now free to in
 
  GER_AUH_FRA_annex_madagascar:0 "§Y[GER.getFlag][GER.getName]§! will annex §YMadagascar Island§!."
 
- GER_AUH_FRA_ukraine_for_russia:0 "§Y[GAL.getFlag]Eastern Galicia§! will be transfered to §Y[RUS.getFlag][RUS.getName]§!"
+ GER_AUH_FRA_ukraine_for_russia:0 "§Y[GAL.getFlag]Eastern Galicia§! will be transfered to §Y[RUS.getFlag][RUS.getName]§!."
 
  FRA_AUH_negociation_free_serbia_and_sea:0 "- §Y[SER.getFlag][SER.getName]§! will be liberated, will remain independent and will get an access to sea."
  FRA_AUH_negociation_alsace_lorraine:0 "- §Y[FRA.getFlag][FRA.getName]§! will get Alsace-Lorraine region."
- FRA_AUH_negociation_free_belgium:0 "- §Y[BEL.getFlag][BEL.getName]§! will be liberated and will remain independent"
+
+ FRA_AUH_negociation_alsace_lorraine_b2:0 "- §Y[AUH.getFlag][AUH.getName]§! will support §Y[FRA.getFlag][FRA.getAdjective]§! claim on Alsace-Lorraine region."
+
+ FRA_AUH_negociation_free_belgium:0 "- §Y[BEL.getFlag][BEL.getName]§! will be liberated and will remain independent."
  AUH_GER_FRA_deal_for_peace_on_alsace_lorraine:0 "§YElsass-Lothringen§! state will be transfered to §Y[FRA.getFlag][FRA.getName]§!, but the §YEntente§! will abandon §Y[RUS.getFlag][RUS.getName]§!."
  AUH_GER_FRA_deal_for_peace_on_alsace_lorraine_AUH_part:0 "§Y[AUH.getFlag][AUH.getName]§! will lose any claim on §Y[POL.getFlag][POL.getName]§!."
 
@@ -772,6 +777,8 @@ AUH_align_ukraine_desc:0 "The Ukranian region is defeated, we are now free to in
 
  ITA_london_pact_weak:0 "§Y[ITA.getFlag][ITA.getName]§! will annex §YTrentino§!, §YIstria§! and §YZara§! states."
 
+ ITA_london_pact_very_weak:0 "§Y[ITA.getFlag][ITA.getName]§! will annex §YTrentino§! and §YZara§! states."
+
  low_chance_of_succeding:0 "§OThis proposal wont likely be accepted by Entente...§!"
 
  send_to_auh:0 "Send the following condition to §Y[AUH.getFlag][AUH.getName]§! :"
@@ -785,6 +792,8 @@ AUH_align_ukraine_desc:0 "The Ukranian region is defeated, we are now free to in
  AUH_negociation_with_germany_means_no_secret:0 "§RIf we contact §Y[GER.getFlag][GER.getNameDef]§!, they will be aware we are trying to get out of the war. We cant anticipate their reaction !§!"
  
  AUH_no_negociation_with_germany:0 "The negociation process will remain secret, but §Y[FRA.getFlag][FRA.getNameDef]§! could retract from this point."
+
+ AUH_negociation_give_galicia_to_RUS:0 "§Y[AUH.getFlag][AUH.getName]§! transfer [GAL.getFlag]Western Galicia to §Y[RUS.getFlag][RUS.getNameDef]§!"
 
  FRA_1910_judiciary_law:0 "Judiciary Administration Reform"
  FRA_1910_judiciary_law_desc:0 "There are no regulations governing the work of judicial administrators. The president of the council §YAristide Briand§! proposed a law allowing the establishment of limiting procedures.\n\nThe project will in particular allow the regulation of certain civil missions, such as the management of the guardianship of the insane, the judicial council, the liquidation of civil companies, the provisional administration of a civil company, etc."
