--- a/localisation/english/ww1_events_l_english.yml
+++ b/localisation/english/ww1_events_l_english.yml
@@ -2197,15 +2197,17 @@ ww1_chile.1.t:0 "President Pedro Montt Dies!"
  ww1_chile.2.t:0 "President Elías Fernández Albano Dies!"
  ww1_chile.2.d:0 "Fernández Albano was hella sick, in fact, there's reports he told our late president pedro montt montt he was even sicker than him, anyway, he caught a cold during Montt's funeral, which soon turned into pulmonary, causing him to die of heart failure after only three weeks in office.\nThe country is stunned, there are only two weeks left until the century of Chilean independence, and there is no president to celebrate it."
  ww1_chile.2.a:0 "We shall call for elections."
- ww1_chile.3.t:0 "[GetYear] Chilean Presidential Election"
- ww1_chile.3.d:0 "Political parties agreed on presenting a single candidate - Ramón Barros - as a symbol of unity in celebration of Chile's first centenary of independence."
- ww1_chile.3.a:0 "Win with a 100% lead!"
+ ww1_chile.3.t:0 "The [GetYear] Chilean Presidential Election"
+ ww1_chile.3.d:0 "The Year Is [GetYear],His Excelency President Montt has died, his succesor, His Excelency Vicepresident Fernandez has died too, and His Excelency Vicepresident Figueroa has taken over in replacement. the parties, as a symbol of unity,have agreed on a united candidate, who will that be? the initial candidates, Agustin Edwards And Juan Luis Sanfuentes, are both very capable for the however, they kinda hate each other,that's why another possible candidate has risen, Ramon Barros Luco, an old figurehead who wont do shit,A President Who Holds No Threat"
+ ww1_chile.3.a:0 "The President Who Holds No Threat"
+ ww1_chile.3.b:0 "A Young, And Modern Perspective Rises In The Moneda Palace"
+ ww1_chile.3.c:0 "Oh No, Please Not Another 1891 Again"
  ww1_chile.4.t:0 "Inauguration of Ramón Barros Luco"
  ww1_chile.4.d:0 "The philosophy of Barros Luco's government can be summarised with the following phrase, well known in Chile, "99% of problems solve themselves, and the remaining 1% have no solution"."
  ww1_chile.4.a:0 "Someone who poses no threat to anybody."
- ww1_chile.5.d:0 "It is a bitter contest between Juan Luis Sanfuentes —  a Coalition candidate of the Liberal Party and Conservative Party, and Javier Ángel Figueroa — supported by the Liberal Alliance parties."
- ww1_chile.5.a:0 "Another victory for the Balmacedist-Conservative Coalition!"
- ww1_chile.5.b:0 "We need a reformist president!"
+ ww1_chile.5.d:0 "It is a bitter contest between Juan Luis Sanfuentes — candidate of Coalicion Conservadora, and Javier Ángel Figueroa — supported by Alianza Liberal"
+ ww1_chile.5.a:0 "Coalicion Returns To Power Once Again"
+ ww1_chile.5.b:0 "A Second Term For Alianza Liberal"
  ww1_chile.6.t:0 "[GetYear] Chilean Presidential Inauguration"
  ww1_chile.6.d_1:0 "Sanfuentes beat Figueroa by a single vote in the electoral vote, with numerous allegations of fraud and electoral intervention. Due to the controversy, the National Congress made a contingent vote, which Sanfuentes won by 77 votes to 41."
  ww1_chile.6.d_2:0 "Figueroa beat Sanfuentes by a single vote in the electoral vote, there were attempts of fraud and electoral intervention by the Balmacedist-Conservative Coalition but they failed."
@@ -2370,6 +2372,16 @@ ww1_chile.57.a:0 "kewl."
 ww1_chile.58.t:0 "Lieutenant Bello Disappears!"
 ww1_chile.58.d:0 "[GetDateText] - Yesterday, Lieutenant Alejandro Bello Silva disappeared during a training flight from the Lo Espejo Military Aeronautics School. In adverse weather conditions, Bello veered off course and went out of sight. Despite intensive searches, no trace of the pilot or his aircraft has been found. Disappearance of Lieutenant Bello leaves Chilean society dismayed.."
 ww1_chile.58.a:0 "Mas Perdido Que El Teniente Bello"
+ww1_chile.59.t:0 "Agustin Edwards' Inauguration"
+ww1_chile.59.d:0 "In a surprising turn of events, Agustín Edwards MacClure has been elected President of Chile in 1910, a victory that has altered the expected political landscape. Known for his profound influence in the media through his ownership of El Mercurio, Edwards MacClure's ascent to the presidency marks a significant shift from the anticipated leadership of Ramón Barros Luco or Juan Luis Sanfuentes. His platform, emphasizing progressive reforms and modernization, resonated with voters eager for change. As the country looks ahead, the new president's policies and vision are expected to chart a dynamic and transformative path for Chile's future."
+ww1_chile.59.a:0 "A Young, And Modern Perspective Rises In The Moneda Palace"
+
+ww1_chile.60.t:0 "Jose Luis Sanfuentes' Inauguration"
+ww1_chile.60.d:0 "In a surprising turn of events, Juan Luis Sanfuentes has been elected President of Chile in 1910, securing a victory that shifts the political landscape. Known for his pragmatic approach and extensive experience in public service, Sanfuentes' election signifies a move towards stability and continuity. His campaign, which emphasized economic modernization and social reforms, resonated deeply with the electorate. As Sanfuentes takes office, the nation anticipates a period of progressive policy-making aimed at fostering economic growth and addressing social inequalities, charting a promising course for Chile's future."
+ww1_chile.60.a:0 "please, not another 1891"
+ ww1_chile.3.b:0 "A Young, And Modern Perspective Rises In The Moneda Palace"
+ ww1_chile.3.c:0 "Oh No, Please Not Another 1891 Again"
+
 
 
 
