--- a/localisation/english/ww1_germany_l_english.yml
+++ b/localisation/english/ww1_germany_l_english.yml
@@ -108,3 +108,4 @@ ww1_germanytooltip1:0 "If Belgium accepts our proposal we can expect the profit 
 #Dynamic Modifiers
 GER_agricultural_incentives:0 "Agricultural Incentives"
 GER_new_major_railway_connection:0 "New Major Railway Connection"
+GER_german_migration:0 "German Migration"
