--- a/localisation/english/state_names_l_english.yml
+++ b/localisation/english/state_names_l_english.yml
@@ -1006,6 +1006,7 @@
  STATE_1004:0 "Anpo Railway"
  STATE_1005:0 "Jingbin Railway"
  STATE_1006:0 "Città di Zara"
+ STATE_1007:0 "North Bukovina"
 
  YODONG_STATE:0 "Yodong"
  SEOGANDO_STATE:0 "Seogando"
