--- a/localisation/english/ww1_traits_l_english.yml
+++ b/localisation/english/ww1_traits_l_english.yml
@@ -436,7 +436,7 @@
  anglophile:0 "Anglophile"
  al_kabir:0 "Al Kabir"
  police_officer:0 "Police Officer"
- oil_baron: "Oil Baron"
+ oil_baron:0 "Oil Baron"
  MON_spiritual_leader:0 "Jebtsundamba Khutuktu"
  TUR_joint_nafia_naziri:0 "Joint Administration of the Environment Ministry"
  TUR_joint_hariciye_naziri:0 "Joint Administration of the Foreign Ministry"
@@ -454,4 +454,5 @@
  TUR_general_secretary_of_ittihadists:0 "General Secretart of İttihadist"
  TUR_ittihadist_propagandist:0 "İttihadist Propagandist"
  TUR_anatolian_literaturist:0 "Anatolian Literaturist"
+ TUR_brutal_paramilitary_officer:0 "Brutal Paramilitary Officer"
 
