--- a/localisation/english/ww1_decisions_l_english.yml
+++ b/localisation/english/ww1_decisions_l_english.yml
@@ -2068,6 +2068,138 @@ AUH_purchase_romanian_grain:0 "Purchase Romanian Grain"
 
  TUR_cult_of_ittihat_ve_terakki:0 "Cult of İttihat ve Terakki"
  TUR_cult_of_ittihat_ve_terakki_desc:0 "İttihat ve Terakki Fırkası has established itself as a large party with wide reaching members. Though not all of it's members hold posts in the government, the unofficially retain power and influence the empire. The views and actions of certain individuals within the party shape the actions, thus the future of the empire."
+ TUR_utilize_ismail_enver:0 "Utilize [ROOT.TUR_ismail_enver.GetName]"
+ TUR_utilize_ismail_enver_desc:0 ""
+ TUR_utilize_ismail_enver_tt:0 ""
+ TUR_dismiss_ismail_enver:0 "Dismiss [ROOT.TUR_ismail_enver.GetName]"
+ TUR_dismiss_ismail_enver_desc:0 ""
+ TUR_dismiss_ismail_enver_tt:0 ""
+ TUR_utilize_ali_ihsan_iloglu:0 "Utilize [ROOT.TUR_ali_ihsan_iloglu.GetName]"
+ TUR_utilize_ali_ihsan_iloglu_desc:0 ""
+ TUR_utilize_ali_ihsan_iloglu_tt:0 ""
+ TUR_dismiss_ali_ihsan_iloglu:0 "Dismiss [ROOT.TUR_ali_ihsan_iloglu.GetName]"
+ TUR_dismiss_ali_ihsan_iloglu_desc:0 ""
+ TUR_dismiss_ali_ihsan_iloglu_tt:0 ""
+ TUR_utilize_ahmet_kemal:0 "Utilize [ROOT.TUR_ahmet_kemal.GetName]"
+ TUR_utilize_ahmet_kemal_desc:0 ""
+ TUR_utilize_ahmet_kemal_tt:0 ""
+ TUR_dismiss_ahmet_kemal:0 "Dismiss [ROOT.TUR_ahmet_kemal.GetName]"
+ TUR_dismiss_ahmet_kemal_desc:0 ""
+ TUR_dismiss_ahmet_kemal_tt:0 ""
+ TUR_utilize_kara_vasif:0 "Utilize [ROOT.TUR_kara_vasif.GetName]"
+ TUR_utilize_kara_vasif_desc:0 ""
+ TUR_utilize_kara_vasif_tt:0 ""
+ TUR_dismiss_kara_vasif:0 "Dismiss [ROOT.TUR_kara_vasif.GetName]"
+ TUR_dismiss_kara_vasif_desc:0 ""
+ TUR_dismiss_kara_vasif_tt:0 ""
+ TUR_utilize_mithat_sukru_bleda:0 "Utilize [ROOT.TUR_mithat_sukru_bleda.GetName]"
+ TUR_utilize_mithat_sukru_bleda_desc:0 ""
+ TUR_utilize_mithat_sukru_bleda_tt:0 ""
+ TUR_dismiss_mithat_sukru_bleda:0 "Dismiss [ROOT.TUR_mithat_sukru_bleda.GetName]"
+ TUR_dismiss_mithat_sukru_bleda_desc:0 ""
+ TUR_dismiss_mithat_sukru_bleda_tt:0 ""
+ TUR_utilize_huseyin_cahit_yalcin:0 "Utilize [ROOT.TUR_huseyin_cahit_yalcin.GetName]"
+ TUR_utilize_huseyin_cahit_yalcin_desc:0 ""
+ TUR_utilize_huseyin_cahit_yalcin_tt:0 ""
+ TUR_dismiss_huseyin_cahit_yalcin:0 "Dismiss [ROOT.TUR_huseyin_cahit_yalcin.GetName]"
+ TUR_dismiss_huseyin_cahit_yalcin_desc:0 ""
+ TUR_dismiss_huseyin_cahit_yalcin_tt:0 ""
+ TUR_utilize_fethi_okyar:0 "Utilize [ROOT.TUR_fethi_okyar.GetName]"
+ TUR_utilize_fethi_okyar_desc:0 ""
+ TUR_utilize_fethi_okyar_tt:0 ""
+ TUR_dismiss_fethi_okyar:0 "Dismiss [ROOT.TUR_fethi_okyar.GetName]"
+ TUR_dismiss_fethi_okyar_desc:0 ""
+ TUR_dismiss_fethi_okyar_tt:0 ""
+ TUR_utilize_mehmed_talat:0 "Utilize [ROOT.TUR_mehmed_talat.GetName]"
+ TUR_utilize_mehmed_talat_desc:0 ""
+ TUR_utilize_mehmed_talat_tt:0 ""
+ TUR_dismiss_mehmed_talat:0 "Dismiss [ROOT.TUR_mehmed_talat.GetName]"
+ TUR_dismiss_mehmed_talat_desc:0 ""
+ TUR_dismiss_mehmed_talat_tt:0 ""
+ TUR_utilize_mustafa_kemal:0 "Utilize [ROOT.TUR_mustafa_kemal.GetName]"
+ TUR_utilize_mustafa_kemal_desc:0 ""
+ TUR_utilize_mustafa_kemal_tt:0 ""
+ TUR_dismiss_mustafa_kemal:0 "Dismiss [ROOT.TUR_mustafa_kemal.GetName]"
+ TUR_dismiss_mustafa_kemal_desc:0 ""
+ TUR_dismiss_mustafa_kemal_tt:0 ""
+ TUR_utilize_ahmed_cemal:0 "Utilize [ROOT.TUR_ahmed_cemal.GetName]"
+ TUR_utilize_ahmed_cemal_desc:0 ""
+ TUR_utilize_ahmed_cemal_tt:0 ""
+ TUR_dismiss_ahmed_cemal:0 "Dismiss [ROOT.TUR_ahmed_cemal.GetName]"
+ TUR_dismiss_ahmed_cemal_desc:0 ""
+ TUR_dismiss_ahmed_cemal_tt:0 ""
+ TUR_utilize_halil_mentese:0 "Utilize [ROOT.TUR_halil_mentese.GetName]"
+ TUR_utilize_halil_mentese_desc:0 ""
+ TUR_utilize_halil_mentese_tt:0 ""
+ TUR_dismiss_halil_mentese:0 "Dismiss [ROOT.TUR_halil_mentese.GetName]"
+ TUR_dismiss_halil_mentese_desc:0 ""
+ TUR_dismiss_halil_mentese_tt:0 ""
+ TUR_utilize_bahattin_bey:0 "Utilize [ROOT.TUR_bahattin_bey.GetName]"
+ TUR_utilize_bahattin_bey_desc:0 ""
+ TUR_utilize_bahattin_bey_tt:0 ""
+ TUR_dismiss_bahattin_bey:0 "Dismiss [ROOT.TUR_bahattin_bey.GetName]"
+ TUR_dismiss_bahattin_bey_desc:0 ""
+ TUR_dismiss_bahattin_bey_tt:0 ""
+ TUR_utilize_ziya_gokalp:0 "Utilize [ROOT.TUR_ziya_gokalp.GetName]"
+ TUR_utilize_ziya_gokalp_desc:0 ""
+ TUR_utilize_ziya_gokalp_tt:0 ""
+ TUR_dismiss_ziya_gokalp:0 "Dismiss [ROOT.TUR_ziya_gokalp.GetName]"
+ TUR_dismiss_ziya_gokalp_desc:0 ""
+ TUR_dismiss_ziya_gokalp_tt:0 ""
+ TUR_utilize_celal_bayar:0 "Utilize [ROOT.TUR_celal_bayar.GetName]"
+ TUR_utilize_celal_bayar_desc:0 ""
+ TUR_utilize_celal_bayar_tt:0 ""
+ TUR_dismiss_celal_bayar:0 "Dismiss [ROOT.TUR_celal_bayar.GetName]"
+ TUR_dismiss_celal_bayar_desc:0 ""
+ TUR_dismiss_celal_bayar_tt:0 ""
+ TUR_utilize_mehmet_emin_yurdakul:0 "Utilize [ROOT.TUR_mehmet_emin_yurdakul.GetName]"
+ TUR_utilize_mehmet_emin_yurdakul_desc:0 ""
+ TUR_utilize_mehmet_emin_yurdakul_tt:0 ""
+ TUR_dismiss_mehmet_emin_yurdakul:0 "Dismiss [ROOT.TUR_mehmet_emin_yurdakul.GetName]"
+ TUR_dismiss_mehmet_emin_yurdakul_desc:0 ""
+ TUR_dismiss_mehmet_emin_yurdakul_tt:0 ""
+ TUR_utilize_nazim_bey:0 "Utilize [ROOT.TUR_nazim_bey.GetName]"
+ TUR_utilize_nazim_bey_desc:0 ""
+ TUR_utilize_nazim_bey_tt:0 ""
+ TUR_dismiss_nazim_bey:0 "Dismiss [ROOT.TUR_nazim_bey.GetName]"
+ TUR_dismiss_nazim_bey_desc:0 ""
+ TUR_dismiss_nazim_bey_tt:0 ""
+ TUR_utilize_ismail_canbolat:0 "Utilize [ROOT.TUR_ismail_canbolat.GetName]"
+ TUR_utilize_ismail_canbolat_desc:0 ""
+ TUR_utilize_ismail_canbolat_tt:0 ""
+ TUR_dismiss_ismail_canbolat:0 "Dismiss [ROOT.TUR_ismail_canbolat.GetName]"
+ TUR_dismiss_ismail_canbolat_desc:0 ""
+ TUR_dismiss_ismail_canbolat_tt:0 ""
+ TUR_utilize_cavid_bey:0 "Utilize [ROOT.TUR_cavid_bey.GetName]"
+ TUR_utilize_cavid_bey_desc:0 ""
+ TUR_utilize_cavid_bey_tt:0 ""
+ TUR_dismiss_cavid_bey:0 "Dismiss [ROOT.TUR_cavid_bey.GetName]"
+ TUR_dismiss_cavid_bey_desc:0 ""
+ TUR_dismiss_cavid_bey_tt:0 ""
+ TUR_utilize_hamdullah_suphi_tanriover:0 "Utilize [ROOT.TUR_hamdullah_suphi_tanriover.GetName]"
+ TUR_utilize_hamdullah_suphi_tanriover_desc:0 ""
+ TUR_utilize_hamdullah_suphi_tanriover_tt:0 ""
+ TUR_dismiss_hamdullah_suphi_tanriover:0 "Dismiss [ROOT.TUR_hamdullah_suphi_tanriover.GetName]"
+ TUR_dismiss_hamdullah_suphi_tanriover_desc:0 ""
+ TUR_dismiss_hamdullah_suphi_tanriover_tt:0 ""
+ TUR_utilize_halide_edib_adivar:0 "Utilize [ROOT.TUR_halide_edib_adivar.GetName]"
+ TUR_utilize_halide_edib_adivar_desc:0 ""
+ TUR_utilize_halide_edib_adivar_tt:0 ""
+ TUR_dismiss_halide_edib_adivar:0 "Dismiss [ROOT.TUR_halide_edib_adivar.GetName]"
+ TUR_dismiss_halide_edib_adivar_desc:0 ""
+ TUR_dismiss_halide_edib_adivar_tt:0 ""
+ TUR_utilize_suleyman_askeri:0 "Utilize [ROOT.TUR_suleyman_askeri.GetName]"
+ TUR_utilize_suleyman_askeri_desc:0 ""
+ TUR_utilize_suleyman_askeri_tt:0 ""
+ TUR_dismiss_suleyman_askeri:0 "Dismiss [ROOT.TUR_suleyman_askeri.GetName]"
+ TUR_dismiss_suleyman_askeri_desc:0 ""
+ TUR_dismiss_suleyman_askeri_tt:0 ""
+ TUR_utilize_yakub_cemil:0 "Utilize [ROOT.TUR_yakub_cemil.GetName]"
+ TUR_utilize_yakub_cemil_desc:0 ""
+ TUR_utilize_yakub_cemil_tt:0 ""
+ TUR_dismiss_yakub_cemil:0 "Dismiss [ROOT.TUR_yakub_cemil.GetName]"
+ TUR_dismiss_yakub_cemil_desc:0 ""
+ TUR_dismiss_yakub_cemil_tt:0 ""
 
  debt_less_than_0:0 "£consumer_goods_texticon  Consumer Goods Factories factor value on §YOttoman Public Debt Administration§! is more than §Y0.0%§!\n" #Our debt is more than §Y0 Thousand Liras§!.
  TUR_dissolve_the_debt_council:0 "Dissolve the Debt Council"
