--- a/localisation/english/ww1_germany_l_english.yml
+++ b/localisation/english/ww1_germany_l_english.yml
@@ -83,6 +83,11 @@ ww1_germanrework.12.t:0 "Mining Accident in the Ruhr"
  ww1_germanrework.12.d:0 ""
  ww1_germanrework.12.a:0 "A sad day for the Reich"
 
+#National Census
+ww1_germanrework.18.t:0 "The Findings of the National Census"
+ ww1_germanrework.18.d:0 ""
+ ww1_germanrework.18.a:0 "Perhaps German society is not as progressive as we thought..."
+
 #Decisions
 
 #Reichstag
